# anki-deck-manager

./: .gitignore  AI_DATA_SPEC.md  README.md  pyproject.toml
src/ankidmpy/: builder.py  copier.py  importer.py  indexer.py  runner.py  syncer.py  util.py
