[tool.poetry]
name = "ankidmpy"
version = "0.1.0"
description = "Python port of github.com/OnkelTem/anki-dm"
authors = ["Douglas Mennella <douglas.mennella@gmail.com>"]
license = "MIT"
packages = [{ include = "ankidmpy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
anki-dm ="ankidmpy:main"
